# oapitui

./: Cargo.toml  Dockerfile  PLAN.md  README.md  config.example.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  theme.rs
crates/tui/src/ui/: add_server.rs  endpoint_list.rs  env_picker.rs  history.rs  mod.rs  request_builder.rs  response_viewer.rs  server_list.rs
crates/tui/src/views/: add_server.rs  endpoint_list.rs  env_picker.rs  history.rs  mod.rs  request_builder.rs  response_viewer.rs  server_list.rs
