[workspace]
members = [
    "crates/config",
    "crates/openapi",
    "crates/client",
    "crates/tui",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
