[package]
name    = "oapitui-openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
reqwest         = { workspace = true }
oapitui-config   = { path = "../config" }
openapiv3  = "2"
serde_yaml = "0.9"
indexmap   = { version = "2", features = ["serde"] }
