[package]
name    = "oaitui-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oaitui"
path = "src/main.rs"

[dependencies]
oaitui-config = { path = "../config" }
oaitui-openapi = { path = "../openapi" }
oaitui-client  = { path = "../client" }

anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }

ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
