[package]
name    = "oapitui-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oat"
path = "src/main.rs"

[dependencies]
oapitui-config = { path = "../config" }
oapitui-openapi = { path = "../openapi" }
oapitui-client  = { path = "../client" }

anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }

ratatui          = "0.29"
pulldown-cmark   = { version = "0.13", default-features = false }
crossterm  = { version = "0.28", features = ["event-stream"] }
chrono     = "0.4"
arboard    = "3"
notify     = "7"
dirs       = "5"
